--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+tuquito-desktop-main (4.0-3) lucid; urgency=low
+
+  * Revisión de paquetes
+
+ -- Mario Colque <mario@tuquito.org.ar>  Thu, 01 Jul 2010 16:33:36 -0300
+
 tuquito-desktop-main (4.0-2) lucid; urgency=low
 
   * Revisión de paquetes en dependencias
