--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+tuquito-desktop-main (4.0-3.1) lucid; urgency=low
+
+  * revisión de paquetes
+
+ -- Mario Colque <mario@tuquito.org.ar>  Sat, 03 Jul 2010 06:02:43 -0300
+
 tuquito-desktop-main (4.0-3) lucid; urgency=low
 
   * Revisión de paquetes
