--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+tuquito-desktop-main (4.0-6) lucid; urgency=low
+
+  * Agregado tucan, vinagre, gucharmap
+
+ -- Mario Colque <mario@tuquito.org.ar>  Wed, 07 Jul 2010 18:08:22 -0300
+
 tuquito-desktop-main (4.0-5) lucid; urgency=low
 
   * agregados gwibber y gufw
