--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+tuquito-desktop-main (4.0-7) lucid; urgency=low
+
+  * Agregado paquetes de idiomas para openoffice.org
+  * Agregado Chromium browser + codecs nonfree
+
+ -- Mario Colque <mario@tuquito.org.ar>  Sun, 18 Jul 2010 19:05:21 -0300
+
 tuquito-desktop-main (4.0-6) lucid; urgency=low
 
   * Agregado tucan, vinagre, gucharmap
