--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+tuquito-desktop-main (4.1) maverick; urgency=low
+
+  * rebranded to Wichi
+
+ -- Mario Colque <mario@tuquito.org.ar>  Sat, 23 Oct 2010 13:14:40 -0300
+
 tuquito-desktop-main (4.0-7) lucid; urgency=low
 
   * Agregado paquetes de idiomas para openoffice.org
