--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+tuquito-desktop-main (4.2) maverick; urgency=low
+
+  * new depends
+
+ -- Mario Colque <mario@tuquito.org.ar>  Sat, 23 Oct 2010 22:02:14 -0300
+
 tuquito-desktop-main (4.1) maverick; urgency=low
 
   * rebranded to Wichi
